Changelog for Catmandu-RDF

{{$NEXT}}
  - Fixing SPARQL examples with latest RDF::LDF

0.31  2016-04-13 10:24:55 CEST
  - Fix test failure caused by RDF::NS (#29)

0.30  2016-04-03 13:30:18 CEST
  - increase RDF::LDF version (#28)

0.29  2016-03-30 14:28:27 CEST
  - provide caching support for HTTP access

0.28  2015-11-25 11:35:42 CET
  - streaming export in NTriples format by default (issue #25)

0.27  2015-05-30 14:15:45 CEST
  - added sparql file option (issue #19)

0.26  2015-05-21 10:38:12 CEST
  - added support of Linked Data Fragments

0.25  2015-03-27 13:53:59 CET
  - support streaming of NTriple data

0.24  2015-03-09 13:20:23 CET
  - added support of SPARQL
  - fixed some unit tests
  - rewrote aref_query fix

0.23  2014-12-11 16:41:22 CET
  - fix bnode mapping bug
  - simplify calling syntax of aref_query fix

0.22  2014-12-11 15:01:15 CET
  - align with RDF::aREF 0.22, new options predicate_map

0.20  2014-12-10 15:13:40 CET
  - tried to fix import from URL encoding (issue #9)

0.19  2014-12-10 14:17:59 CET
  - add triples importer mode (issue #5)
  - disable namespaces with ns=0 (issue #8)
  - support importing from string reference

0.18  2014-10-14 12:53:01 CEST
  - add field _url on import from url (issue #9)
  - started fix function aref_query

0.17  2014-10-02 14:26:35 CEST
  - Migrate to Dist::Milla
  - Adjust to aREF 0.19

0.15 2014-07-17T11:35:04
 - document and test count method
 - started importer

0.14 2014-01-22T07:18:56
 - internally use RDF::Trine::Model
 - bug detected (issue #3?)
 - use RDF::aREF 0.09

0.13 2014-01-15T12:15:56
 - Merge release
 - use RDF::aREF 0.08

0.12 2014-01-12T16:39:03
 - release 0.12 with fixed dependencies
 - update dependencies
 - fixed dist.ini
 - fixed dependency

0.11 2013-12-02T14:17:01
 - documentation
 - fixed cpanfile
 - don't test ob Perl 5.10
 - split RDF::aREF as independent module

0.10 2013-11-15T11:18:20
 - started to support nested input documents
 - renamed aRef to aREF

0.09 2013-11-13T14:29:24