@@ -2,6 +2,8 @@ Changelog for Catmandu-RDF
 
 {{$NEXT}}
   - Fixing SPARQL examples with latest RDF::LDF
+  - Better support for streaming RDF input
+  - Adding a --speed option to the Catmandu::Importer::RDF
 
 0.31  2016-04-13 10:24:55 CEST
   - Fix test failure caused by RDF::NS (#29)
